--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,3 +1,8 @@
+html {
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+}
+
 .home .hero img
   max-width: 500px !important
   min-width: 300px
