docs: fix code block overflow

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -26,3 +26,4 @@
 
 code
   font-family: 'Nerd Font', source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  overflow-wrap: break-word
